<resources>
    <string name="app_name">ConstrainLayout</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bSignin">Sign-In</string>
    <string name="txEmail">Hasil Email</string>
    <string name="txPassword">Hasil Password</string>
    <string name="judul1">Login</string>
    <string name="judul2">Hasil</string>
    <string name="idaftar">Daftar</string>
    <string name="mdaftar">Pendaftaran</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepas">Confirm Password</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="datakontak">Data Kontak</string>
    <string name="listkontak">List Kontak</string>
    <string name="nama">Nama</string>
    <string name="rdperem">Perempuan</string>
    <string name="rdlk">Laki-Laki</string>
    <string name="blmdaftar">Belum Mendaftar?</string>






</resources>